# zephyr_stm32mp1

./: west.yml
boards/arm/96b_argonkey/: pinmux.c
boards/arm/96b_carbon/: pinmux.c
boards/arm/96b_neonkey/: pinmux.c
boards/arm/96b_stm32_sensor_mez/: pinmux.c
boards/arm/b_l072z_lrwan1/: pinmux.c
boards/arm/mikroe_mini_m4_for_stm32/: pinmux.c
boards/arm/mps2_an521/: dts.fixup  mps2_an521.dts
boards/arm/nucleo_f030r8/: pinmux.c
boards/arm/nucleo_f103rb/: pinmux.c
boards/arm/nucleo_f302r8/: pinmux.c
boards/arm/nucleo_f334r8/: pinmux.c
boards/arm/nucleo_f401re/: pinmux.c
boards/arm/nucleo_f411re/: pinmux.c
boards/arm/nucleo_f412zg/: pinmux.c
boards/arm/nucleo_f413zh/: pinmux.c
boards/arm/nucleo_f429zi/: pinmux.c
boards/arm/nucleo_f446re/: pinmux.c
boards/arm/nucleo_f746zg/: pinmux.c
boards/arm/nucleo_f756zg/: pinmux.c
boards/arm/nucleo_l432kc/: pinmux.c
boards/arm/nucleo_l476rg/: pinmux.c
boards/arm/nucleo_l4r5zi/: pinmux.c
boards/arm/olimexino_stm32/: pinmux.c
boards/arm/stm32_min_dev/: pinmux.c
boards/arm/stm32f3_disco/: pinmux.c
boards/arm/stm32f746g_disco/: pinmux.c
boards/arm/stm32mp157c_dk2/: Kconfig.defconfig  arduino_r3_connector.dtsi  pinmux.c  stm32mp157c_dk2.dts  stm32mp157c_dk2.yaml  stm32mp157c_dk2_defconfig
boards/quark_se_c1000_devboard/: Kconfig.defconfig  board.h
cmake/: open-amp.cmake
drivers/bluetooth/hci/: spi.c
drivers/ieee802154/: ieee802154_cc2520.c
drivers/pinmux/stm32/: pinmux_stm32.h  pinmux_stm32mp1x.h
drivers/serial/: uart_cmsdk_apb.c  uart_sam.c
drivers/spi/: Kconfig.stm32  spi_ll_stm32.c
drivers/timer/: cortex_m_systick.c
dts/arm/atmel/: sam4s.dtsi
ext/: Kconfig
ext/libmetal/lib/: device.c  (+1 more)
include/net/: buf.h
net/: Kconfig  Makefile
net/ip/: Kconfig
samples/subsys/ipc/openamp/master/: CMakeLists.txt
samples/subsys/ipc/openamp/master/src/: main_master.c
samples/subsys/ipc/openamp/remote/: CMakeLists.txt
samples/subsys/ipc/openamp/remote/src/: main_remote.c
scripts/: sanitycheck
(+28 files in other folders)
